<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ecf0f1"
    android:orientation="vertical">
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ecf0f1"
            android:textSize="30sp" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/selector"
            android:text="@string/_1"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/selector"
            android:text="@string/_2"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/selector"
            android:text="@string/_3"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/biv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/operator_buttons"
            android:text="@string/divide"
            android:textColor="#ecf0f1"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/selector"
            android:text="@string/_4"
            android:textColor="#ecf0f1"
            android:textSize="20sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/b5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/selector"
            android:text="@string/_5"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/selector"
            android:text="@string/_6"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bsub"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/operator_buttons"
            android:text="@string/subtract"
            android:textColor="#ecf0f1"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/selector"
            android:text="@string/_7"
            android:textColor="#ecf0f1"
            android:textSize="20sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/b8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/selector"
            android:text="@string/_8"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/selector"
            android:text="@string/_9"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bmul"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/operator_buttons"
            android:text="@string/multiply"
            android:textColor="#ecf0f1"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bDot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/selector"
            android:text="@string/decimal"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/selector"
            android:text="@string/_0"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/BRemain"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/operator_buttons"
            android:text="@string/percent"
            android:textColor="#ecf0f1"
            android:textSize="30sp" />

        <Button
            android:id="@+id/badd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/operator_buttons"
            android:onClick="onClick"
            android:text="@string/add"
            android:textColor="#ecf0f1"
            android:textSize="30sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="#A81106"
            android:text="Del"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttoneql"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="#035E07"
            android:text="="
            android:textColor="#ecf0f1"
            android:textSize="40sp" />

    </LinearLayout>


</LinearLayout>
